# harvest

./: LICENSE  README.md  SETUP_GUIDE.md
backend/: manage.py  pyproject.toml
backend/harvest/: asgi.py  settings.py  urls.py  wsgi.py
backend/harvest/settings/: __init__.py  base.py  dev.py  prod.py
backend/juvenileharvest/: admin.py  apps.py  auth.py  models.py  permissions.py  urls.py  views.py
backend/juvenileharvest/migrations/: 0001_initial.py  0002_family_category.py  0002_family_harvestpayment_family.py  0003_child.py  0003_harvestpaymentevent_family_created_at_and_more.py  0004_remove_harvestpayment_insert_insert_and_more.py  0005_harvestpaymenteventproxy.py
frontend/: Caddyfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Authentication.jsx  ChangePasswordForm.jsx  FamiliesChildrenTable.jsx  FamiliesTable.jsx  FamilyPaymentsTable.jsx  LoginForm.jsx  ManageChildForm.jsx  PaymentForm.jsx  SignupForm.jsx  UpdateFamilyPaymentForm.jsx  axios.js  index.css
frontend/src/components/: Tab.jsx
frontend/src/constants/: familyCategories.js
