[project]
name = "HarvestBackend"
version = "0.1.0"
description = "Backend code for Harvest"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.1.0",
    "psycopg[c]>=3.3.3",
]
